--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.1.0",
-    "@angular/animations": "^12.2.17",
+    "@angular/animations": "13.3.11",
     "@angular/cdk": "^11.0.2",
-    "@angular/common": "^12.2.17",
-    "@angular/compiler": "^12.2.17",
-    "@angular/core": "^12.2.17",
-    "@angular/forms": "^12.2.17",
+    "@angular/common": "13.3.11",
+    "@angular/compiler": "13.3.11",
+    "@angular/core": "13.3.11",
+    "@angular/forms": "13.3.11",
     "@angular/google-maps": "^10.0.0",
-    "@angular/platform-browser": "12.2.17",
-    "@angular/platform-browser-dynamic": "12.2.17",
-    "@angular/router": "12.2.17",
+    "@angular/platform-browser": "13.3.11",
+    "@angular/platform-browser-dynamic": "13.3.11",
+    "@angular/router": "13.3.11",
     "@swimlane/ngx-charts": "^16.0.0",
     "angular-google-charts": "^0.1.1",
     "angular-moment": "^1.3.0",
@@ -36,19 +36,19 @@
     "ngx-bootstrap-modal": "^2.0.1",
     "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^13.2.1",
-    "rxjs": "6.6.7",
-    "tslib": "^2.0.0",
+    "rxjs": "^6.6.7",
+    "tslib": "^2.3.0",
     "xlsx": "^0.16.9",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.2.18",
-    "@angular/cli": "12.2.18",
-    "@angular/compiler-cli": "12.2.17",
+    "@angular-devkit/build-angular": "13.3.11",
+    "@angular/cli": "13.3.11",
+    "@angular/compiler-cli": "13.3.11",
     "@types/googlemaps": "^3.39.13",
     "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^12.20.0",
+    "@types/node": "^12.20.36",
     "codelyzer": "^6.0.0-next.1",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^5.0.0",
@@ -61,6 +61,6 @@
     "source-map-loader": "^1.1.2",
     "ts-node": "^8.3.0",
     "tslint": "^6.1.0",
-    "typescript": "4.3.5"
+    "typescript": "~4.6.4"
   }
 }
