--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.1.0",
-    "@angular/animations": "13.3.11",
+    "@angular/animations": "^14.2.12",
     "@angular/cdk": "^11.0.2",
-    "@angular/common": "13.3.11",
-    "@angular/compiler": "13.3.11",
-    "@angular/core": "13.3.11",
-    "@angular/forms": "13.3.11",
+    "@angular/common": "^14.2.12",
+    "@angular/compiler": "^14.2.12",
+    "@angular/core": "^14.2.12",
+    "@angular/forms": "^14.2.12",
     "@angular/google-maps": "^10.0.0",
-    "@angular/platform-browser": "13.3.11",
-    "@angular/platform-browser-dynamic": "13.3.11",
-    "@angular/router": "13.3.11",
+    "@angular/platform-browser": "^14.2.12",
+    "@angular/platform-browser-dynamic": "^14.2.12",
+    "@angular/router": "^14.2.12",
     "@swimlane/ngx-charts": "^16.0.0",
     "angular-google-charts": "^0.1.1",
     "angular-moment": "^1.3.0",
@@ -42,9 +42,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.3.11",
-    "@angular/cli": "13.3.11",
-    "@angular/compiler-cli": "13.3.11",
+    "@angular-devkit/build-angular": "^14.2.12",
+    "@angular/cli": "^14.2.12",
+    "@angular/compiler-cli": "^14.2.12",
     "@types/googlemaps": "^3.39.13",
     "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.3",
@@ -61,6 +61,6 @@
     "source-map-loader": "^1.1.2",
     "ts-node": "^8.3.0",
     "tslint": "^6.1.0",
-    "typescript": "~4.6.4"
+    "typescript": "^4.6.4"
   }
 }
