--- a/package.json
+++ b/package.json
@@ -11,17 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.1.0",
-    "@angular/animations": "^14.2.12",
+    "@angular/animations": "^15.2.10",
     "@angular/cdk": "^15.2.9",
-    "@angular/common": "^14.2.12",
-    "@angular/compiler": "^14.2.12",
-    "@angular/core": "^14.2.12",
-    "@angular/forms": "^14.2.12",
-    "@angular/google-maps": "^10.0.0",
-    "@angular/platform-browser": "^14.2.12",
-    "@angular/platform-browser-dynamic": "^14.2.12",
-    "@angular/router": "^14.2.12",
+    "@angular/common": "^15.2.10",
+    "@angular/compiler": "^15.2.10",
+    "@angular/core": "15.2.10",
+    "@angular/forms": "^15.2.10",
+    "@angular/google-maps": "^15.2.9",
+    "@angular/platform-browser": "^15.2.10",
+    "@angular/platform-browser-dynamic": "^15.2.10",
+    "@angular/router": "^15.2.10",
     "@swimlane/ngx-charts": "^16.0.0",
     "angular-google-charts": "^0.1.1",
     "angular-moment": "^1.3.0",
@@ -31,25 +30,24 @@
     "jspdf": "^2.5.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "ng-agm-core-lib": "^1.0.5",
     "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^6.2.0",
-    "ngx-bootstrap-modal": "^2.0.1",
     "ngx-pagination": "^5.0.0",
-    "ngx-toastr": "^13.2.1",
-    "rxjs": "^6.6.7",
+    "ngx-toastr": "^15.1.0",
+    "rxjs": "^7.5.7",
     "tslib": "^2.3.0",
     "xlsx": "^0.16.9",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.12",
-    "@angular/cli": "^14.2.12",
-    "@angular/compiler-cli": "^14.2.12",
+    "@angular-devkit/build-angular": "^15.2.11",
+    "@angular/cli": "^15.2.11",
+    "@angular/compiler-cli": "^15.2.10",
     "@types/googlemaps": "^3.39.13",
     "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^12.20.36",
-    "codelyzer": "^6.0.0-next.1",
+    "@types/node": "^18.19.121",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^5.0.0",
     "karma": "^6.4.4",
@@ -60,7 +58,6 @@
     "protractor": "^7.0.0",
     "source-map-loader": "^1.1.2",
     "ts-node": "^8.3.0",
-    "tslint": "^6.1.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.9.5"
   }
 }
